fixed the z-index

--- a/src/CSS/front-page.scss
+++ b/src/CSS/front-page.scss
@@ -86,6 +86,7 @@
     background-color: var(--background-black);
     width: 75%;
     height: 5rem;
+    z-index: 1000;
 
     &-left {
         height: 100%;
